Fix vertical align

--- a/styles/scroll-percentage.less
+++ b/styles/scroll-percentage.less
@@ -1,1 +1,3 @@
-#scroll-percentage {}
+#scroll-percentage {
+  vertical-align: middle;
+}
